# dotfiles

./: .clang-tidy  .gitmodules  .vimrc
Clion/: .ideavimrc
Opensuse-repos/: Microsoft.repo  VScode.repo  repo-Wine.repo  repo-debug.repo  repo-science.repo
clang-format/: .clang-format
clang-tools/: run-find-all-symbols.py
cmake/: .cmake-format.json  .gitmodules  Api.cmake  Package.cmake  README.md  Test.cmake  ToolChain.cmake  api.cmake  build_libs.sh  toolchain.cmake
cmake/System/install/lib/: libiperf.la  libiperf.so.0.0.0
cmake/System/install/lib/cmake/tiny-process-library/: tiny-process-library-config-release.cmake  tiny-process-library-config.cmake
cmake/System/install/lib64/: libuv.so.1.0.0
cmake/System/install/lib64/cmake/libuv/: libuvConfig-release.cmake
cmake/System/install/lib64/pkgconfig/: benchmark.pc  benchmark_main.pc  cppzmq.pc  libuv-static.pc  libuv.pc
cmake/System/install/share/pkgconfig/: nlohmann_json.pc
cmake/stm32/: CMakeLists.txt  My-arm-none-eabi.cmake
cmake/stm32/FILES/: CMakeLists.txt
cpp/: .gitmodules  debug.h
cpp/libs/: CMakeLists.txt
programe/: debug.h
programe/modules/: stl.cppm
repos.d/: Chrome.repo  repo-non-oss.repo  repo-oss.repo  repo-packman.repo  snappy.repo
vim/: .vimrc  readme
vscode/: Extension_LIST.txt  LOCATION.md  keybindings.json  laucn_cortexm.json  launch.json  settings.json
zsh/: .zshrc
